Добавляет проект для проверки наставником

--- a/catalog.html
+++ b/catalog.html
@@ -23,7 +23,7 @@
               <a class="navigation-link" href="#"> О Седоне</a>
             </li>
             <li class="navigation-item">
-              <a class="navigation-link navigation-link-current" href="catalog.html"> Гостиницы</a>
+              <a class="navigation-link navigation-link-current"> Гостиницы</a>
             </li>
           </ul>
           <ul class="navigation-user">
@@ -231,7 +231,7 @@
               <p class="catalog-hotels-type">Гостиница</p>
               <p class="catalog-hotels-price">От 4000 ₽</p>
               <a class="catalog-hotels-detail" href="#">Подробнее</a>
-              <a class="catalog-hotels-like" href="#">В Избранное</a>
+              <button class="catalog-hotels-like" type="button">В Избранное</button>
               <p class="catalog-hotels-card-stars catalog-hotels-card-stars-4">
                 <span class="visually-hidden"> Комфортность 4 звезды</span>
               </p>
@@ -246,7 +246,7 @@
               <p class="catalog-hotels-type">Гостиница</p>
               <p class="catalog-hotels-price">От 5000 ₽</p>
               <a class="catalog-hotels-detail" href="#">Подробнее</a>
-              <a class="catalog-hotels-in-like" href="#">В Избранном</a>
+              <button class="catalog-hotels-in-like" type="button">В Избранном</button>
               <p class="catalog-hotels-card-stars catalog-hotels-card-stars-4">
                 <span class="visually-hidden">Комфортность 4 звезды</span>
               </p>
@@ -261,7 +261,7 @@
               <p class="catalog-hotels-type">Гостиница</p>
               <p class="catalog-hotels-price">От 2500 ₽</p>
               <a class="catalog-hotels-detail" href="#">Подробнее</a>
-              <a class="catalog-hotels-like" href="#">В Избранное</a>
+              <button class="catalog-hotels-like" type="button">В Избранное</button>
               <p class="catalog-hotels-card-stars catalog-hotels-card-stars-3">
                 <span class="visually-hidden">Комфортность 3 звезды</span>
               </p>
@@ -276,7 +276,7 @@
               <p class="catalog-hotels-type">Гостиница</p>
               <p class="catalog-hotels-price">От 1500 ₽</p>
               <a class="catalog-hotels-detail" href="#">Подробнее</a>
-              <a class="catalog-hotels-like" href="#">В Избранное</a>
+              <button class="catalog-hotels-like" type="button">В Избранное</button>
               <p class="catalog-hotels-card-stars catalog-hotels-card-stars-2">
                 <span class="visually-hidden">Комфортность 2 звезды</span>
               </p>
@@ -306,12 +306,12 @@
         </section>
         <section class="newsletter" data-test="subscribe">
           <h2 class="newsletter-title-catalog">Подпишитесь на рассылку</h2>
-          <p class="newsletter-text-catalog">Только полезная информация и никакого спама, честное бойскаутское!
+          <p class="newsletter-text-catalog">Только полезная информация и никакого спама,<br> честное бойскаутское!
           </p>
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="subscribe-form-name">
               <label for="user-email" class="visually-hidden">Ваш e-mail</label>
-              <input class="email-input" type="email" name="user-email" id="user-email" placeholder="ваш e-mail"
+              <input class="email-input" type="email" name="user-email" id="user-email" placeholder="Ваш e-mail"
                 required>
               <button type="submit" class="newsletter-button">Подписаться</button>
             </p>
