--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
               <img class="advantages-img" src="images/photo/diablo-bridge.jpg" width="800" height="385"
                 alt="Мост дьявола">
               <div class="advantages-item-big-container">
-                <h3 class="advantages-title">Там есть мост дьявола</h3>
+                <h3 class="advantages-title">Там есть<br> мост дьявола</h3>
                 <p class="advantages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется</p>
               </div>
             </li>
@@ -98,23 +98,23 @@
           <ul class="infrastructure-list">
             <li class="infrastructure-item housing-icon">
               <h3 class="infrastructure-title">Жилье</h3>
-              <p class="infrastructure-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+              <p class="infrastructure-description">Рекомендуем пожить<br> в настоящем мотеле,<br> все как в кино!</p>
             </li>
             <li class="infrastructure-item food-icon">
               <h3 class="infrastructure-title">Еда</h3>
-              <p class="infrastructure-description">Всегда заказывайте топовый фирменный бургер, вы не
+              <p class="infrastructure-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не
                 разочаруетесь!</p>
             </li>
             <li class="infrastructure-item gifts-icon">
               <h3 class="infrastructure-title">Сувениры</h3>
-              <p class="infrastructure-description">Не только китайского, но и настоящего местного
+              <p class="infrastructure-description">Не только китайского,<br> но и настоящего местного
                 производства!</p>
             </li>
           </ul>
         </section>
         <section class="search">
           <h2 class="search-title">Заинтересовались?</h2>
-          <p class="search-text">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц
+          <p class="search-text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц
             в Седоне</p>
 
           <a class="search-button" href="catalog.html">Поиск гостиницы в Седоне</a>
@@ -125,7 +125,7 @@
           <form class="newsletter-form" action="https://echo.htmlacademy.ru/" method="post">
             <p class="subscribe-form-name">
               <label for="user-email" class="visually-hidden">Ваш e-mail</label>
-              <input class="email-input" type="email" name="user-email" id="user-email" placeholder="ваш e-mail"
+              <input class="email-input" type="email" name="user-email" id="user-email" placeholder="Ваш e-mail"
                 required>
               <button type="submit" class="newsletter-button">Подписаться</button>
             </p>
@@ -166,9 +166,10 @@
             </a>
           </li>
         </ul>
-        <a class="footer-phone" href="tel:+78128121212">+7(812) 812-12-12</a>
+        <a class="footer-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
         <a class="copyright" href="https://htmlacademy.ru/">
-          <svg xmlns="http://www.w3.org/2000/svg" width="115" height="34" fill="currentColor">
+          <svg class="footer-logo-academy" xmlns="http://www.w3.org/2000/svg" width="115" height="34"
+            fill="currentColor">
             <path
               d="M0 13.2564v2.6h2.5v-2.6H0ZM11.6 4.8564c-1.6 0-2.8.7-3.6 1.7h-.1v-6.2h-2v15.5h2v-5.3c0-2.1 1.3-3.6 3.3-3.6 1.8 0 2.9 1.4 2.9 3.2v5.7h2v-6.1c.1-3-1.8-4.9-4.5-4.9ZM26.6 5.1565h-4.8v-3.7h-2v3.8h-1.9v2h1.9v5.9999c0 1.7 1 2.7 2.7 2.7h4.1v-2h-3.7c-.7 0-1.1-.4-1.1-1.1v-5.7h4.8v-2ZM41.1 4.9565c-1.6 0-2.9.8-3.5 2.1h-.1c-.6-1.2-1.8-2.1-3.4-2.1-1.4 0-2.5.8-3.1 1.8h-.1v-1.6H29v10.5999h2v-5.4c0-2 1-3.5 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.5-1.4-4.3-3.9-4.3ZM47.8 13.0564c0 1.7 1 2.7 2.8 2.7h2v-2h-1.7c-.7 0-1.1-.4-1.1-1.1v-12.3h-2v12.7ZM28.9 20.0564c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.4 3.6-3.6 3.6ZM44.2 22.3564c-.5-2.4-2.6-4.1-5.4-4.1-3.4 0-5.6 2.5-5.6 5.6 0 3.1 2.2 5.6 5.6 5.6 2.8 0 4.9-1.8 5.4-4.2h-2.1c-.4 1.3-1.7 2.3-3.3 2.3-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6c1.6 0 2.8 1 3.3 2.2h2.1v-.2ZM55.1 20.0564c-.9-1.1-2.2-1.8-3.9-1.8-3.1 0-5.4 2.3-5.4 5.6s2.3 5.6 5.4 5.6c1.8 0 3-.8 3.8-1.9h.1v1.6h2v-10.6h-2v1.5Zm-3.6 7.4c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c0 1.9-1.5 3.6-3.6 3.6ZM68.7 20.1564c-.9-1.1-2.2-1.9-3.9-1.9-3.1 0-5.4 2.3-5.4 5.6s2.2 5.6 5.4 5.6c1.7 0 3-.8 3.8-1.8h.1v1.5h2v-15.4h-2v6.4Zm-3.6 7.3c-2.2 0-3.6-1.6-3.6-3.6s1.4-3.6 3.6-3.6 3.6 1.6 3.6 3.6c-.1 2-1.5 3.6-3.6 3.6ZM78.3 18.2564c-3.3 0-5.5 2.5-5.5 5.6 0 3 2.1 5.6 5.5 5.6 2.5 0 4.5-1.3 5.2-3.6h-2.1c-.5 1-1.6 1.6-3 1.6-1.9 0-3.3-1.3-3.4-2.9h8.8c.2-3.6-2-6.3-5.5-6.3Zm0 1.9c1.7 0 3 1 3.3 2.6h-6.5c.3-1.5 1.5-2.6 3.2-2.6ZM98.2 18.2564c-1.6 0-2.9.8-3.6 2h-.1c-.6-1.2-1.8-2-3.4-2-1.4 0-2.5.7-3.1 1.8v-1.5h-1.9v10.6h2v-5.4c0-2 1-3.4 2.6-3.5 1.5 0 2.4 1 2.4 2.6v6.3h2v-5.6c0-2.4 1.4-3.3 2.6-3.3 1.5 0 2.4 1 2.4 2.6v6.3h2v-6.5c.1-2.6-1.4-4.4-3.9-4.4ZM109.4 27.3564l-3.6-8.9h-2.2l4.8 11.6c-.3.9-.7 1.2-1.7 1.2h-2.5v2h2.5c1.8 0 2.8-.8 3.5-2.6l4.7-12.2h-2.1l-3.4 8.9Z" />
           </svg>
@@ -176,10 +177,11 @@
       </footer>
     </div>
 
-    <div class="modal-container">
+    <div class="modal-container modal-container-close">
       <div class="modal modal-search">
         <button class="modal-close-button" type="button">
-          <svg width="15" height="15" viewBox="0 0 15 15" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+          <svg aria-hidden="true" focusable="false" width="15" height="15" viewBox="0 0 15 15" fill="currentColor"
+            xmlns="http://www.w3.org/2000/svg">
             <path
               d="M14.4905 1.78288L13.1982 0.49057L7.49048 6.19826L1.78279 0.49057L0.490479 1.78288L6.19817 7.49057L0.490479 13.1983L1.78279 14.4906L7.49048 8.78288L13.1982 14.4906L14.4905 13.1983L8.78279 7.49057L14.4905 1.78288Z" />
           </svg>
@@ -188,37 +190,42 @@
         <section class="modal-content">
           <h2 class="modal-title">Поиск гостиницы в Седоне</h2>
           <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
-            <label class="search-form-label" for="search-check-in">Дата заезда:</label>
-            <input class="search-form-input input-date" type="text" name="search-check-in" value="27 апреля 2020">
-            <p class="modal-filed-message modal-filed-message-error">Мы не можем отправить вас в прошлое.</p>
-            <label class="search-form-label" for="search-check-in">Дата выезда:</label>
-            <input class="search-form-input input-date" type="text" name="search-date-check-out"
-              value="1 сентября 2023">
-            <p class="modal-filed-message">На эти даты есть свободные номера. Пока есть.</p>
+            <div class="label-wrapper-data">
+              <label class="search-check-in-label" for="search-check-in">Дата заезда:</label>
+              <input class="search-input-date" type="text" id="search-check-in" name="search-check-in"
+                value="27 апреля 2020" placeholder="Укажите дату" required>
+              <span class="modal-filed-message modal-filed-message-error">Мы не можем отправить вас в прошлое.</span>
+            </div>
+            <div class="label-wrapper-data">
+              <label class="search-check-out-label" for="search-check-out">Дата выезда:</label>
+              <input class="search-input-date" type="text" id="search-check-out" name="search-check-out"
+                value="1 сентября 2023" placeholder="Укажите дату" required>
+              <span class="modal-filed-message">На эти даты есть свободные номера. Пока есть.</span>
+            </div>
             <div class="modal-age-wrapper">
-              <p class="guests-wrapper">
-                <label class="search-form-label" for="search-adults">Взрослые:</label>
+              <div class="guests-wrapper">
+                <label class="adults-label" for="adults">Взрослые:</label>
                 <span class="input-number-wrapper">
                   <button class="number-minus" type="button">
-                    <svg width="14" height="2" viewBox="0 0 14 2" fill="currentColor"
-                      xmlns="http://www.w3.org/2000/svg">
+                    <svg aria-hidden="true" focusable="false" width="14" height="2" viewBox="0 0 14 2"
+                      fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 0L0 2L14 2V0L0 0Z" />
                     </svg>
                     <span class="visually-hidden">Уменьшить количество</span>
                   </button>
-                  <input class="search-form-input" type="number" id="adults" name="adults" value="2">
+                  <input class="search-input-guests" type="number" id="adults" name="adults" value="2" required>
                   <button class="number-plus" type="button">
-                    <svg width="14" height="14" viewBox="0 0 14 14" fill="currentColor"
-                      xmlns="http://www.w3.org/2000/svg">
+                    <svg aria-hidden="true" focusable="false" width="14" height="14" viewBox="0 0 14 14"
+                      fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
                     </svg>
                     <span class="visually-hidden">Увеличить количество</span>
                   </button>
                 </span>
-              </p>
-              <p class="guests-wrapper">
-                <span class="form-label-icon">
-                  <label class="search-form-label" for="search-children">Дети:</label>
+              </div>
+              <div class="guests-wrapper">
+                <span class="form-label form-label-icon">
+                  <label class="children-label" for="children">Дети:</label>
                   <span class="tooltip">
                     <button class="tooltip-toggle" type="button" aria-labelledby="tooltip-label"></button>
                     <span class="tooltip-text" role="tooltip" id="tooltip-label">Укажите количество детей, которые будут
@@ -227,37 +234,28 @@
                 </span>
                 <span class="input-number-wrapper">
                   <button class="number-minus" type="button">
-                    <svg width="14" height="2" viewBox="0 0 14 2" fill="currentColor"
-                      xmlns="http://www.w3.org/2000/svg">
+                    <svg aria-hidden="true" focusable="false" width="14" height="2" viewBox="0 0 14 2"
+                      fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 0L0 2L14 2V0L0 0Z" />
                     </svg>
                     <span class="visually-hidden">Уменьшить количество</span>
                   </button>
-                  <input class="search-form-input" type="number" id="children" name="children" value="2">
+                  <input class="search-input-guests" type="number" id="children" name="children" value="2">
                   <button class="number-plus" type="button">
-                    <svg width="14" height="14" viewBox="0 0 14 14" fill="currentColor"
-                      xmlns="http://www.w3.org/2000/svg">
+                    <svg aria-hidden="true" focusable="false" width="14" height="14" viewBox="0 0 14 14"
+                      fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
                     </svg>
                     <span class="visually-hidden">Увеличить количество</span>
                   </button>
                 </span>
-              </p>
+              </div>
             </div>
             <button type="submit" class="search-form-button">Найти</button>
           </form>
         </section>
       </div>
     </div>
-
-
-
-
-
-
-
-
-
 
   </body>
 
