Добавляет проект для автоматической проверки

--- a/index.html
+++ b/index.html
@@ -55,14 +55,15 @@
         <section class="advantages" data-test="advantages">
           <h2 class="visually-hidden"> Преимущества</h2>
           <div class="advantages-lead-wrapper">
-            <p class="lead">Седона- небольшой городок в Аризоне, заслуживающий большего!</p>
-            <p class="advantages-text">Рассмотрим причины по которым Седона круче, чем Гранд Каньон!</p>
+            <p class="lead">Седона — небольшой городок в Аризоне,
+              заслуживающий большего!</p>
+            <p class="advantages-text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           </div>
           <ul class="advantages-list">
             <li class="advantages-item advantages-item-big">
               <div class="advantages-item-big-container">
-                <h3 class="advantages-title">Настоящий городок</h3>
-                <p class="advantages-description">Седона- не аттракцион для туристов, там течет своя жизнь</p>
+                <h3 class="advantages-title advantages-title-blue">Настоящий городок</h3>
+                <p class="advantages-description">Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img class="advantages-img" src="images/photo/building-city.jpg" width="800" height="385"
                 alt="Здание в городе">
@@ -83,13 +84,13 @@
               <img class="advantages-img" src="images/photo/diablo-bridge.jpg" width="800" height="385"
                 alt="Мост дьявола">
               <div class="advantages-item-big-container">
-                <h3 class="advantages-title">Там есть<br> мост дьявола</h3>
+                <h3 class="advantages-title advantages-title-blue">Там есть<br> мост дьявола</h3>
                 <p class="advantages-description">Да, по нему можно пройти!Если вы осмелитесь, разумеется</p>
               </div>
             </li>
           </ul>
         </section>
-        <section class="infrastructure" data-test="search">
+        <section class="infrastructure" data-test="service">
           <div class="infrastructure-lead-wrapper">
             <h2 class="visually-hidden">Инфраструктура</h2>
             <p class="lead">Приезжайте в Седону отдохнуть в комфорте и уюте!</p>
@@ -98,7 +99,8 @@
           <ul class="infrastructure-list">
             <li class="infrastructure-item housing-icon">
               <h3 class="infrastructure-title">Жилье</h3>
-              <p class="infrastructure-description">Рекомендуем пожить<br> в настоящем мотеле,<br> все как в кино!</p>
+              <p class="infrastructure-description">Рекомендуем пожить<br> в настоящем мотеле,<br>
+                всё как в кино!</p>
             </li>
             <li class="infrastructure-item food-icon">
               <h3 class="infrastructure-title">Еда</h3>
@@ -112,7 +114,7 @@
             </li>
           </ul>
         </section>
-        <section class="search">
+        <section class="search" data-test="search">
           <h2 class="search-title">Заинтересовались?</h2>
           <p class="search-text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц
             в Седоне</p>
@@ -206,7 +208,7 @@
               <div class="guests-wrapper">
                 <label class="adults-label" for="adults">Взрослые:</label>
                 <span class="input-number-wrapper">
-                  <button class="number-minus" type="button">
+                  <button class="button-counter" type="button">
                     <svg aria-hidden="true" focusable="false" width="14" height="2" viewBox="0 0 14 2"
                       fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 0L0 2L14 2V0L0 0Z" />
@@ -214,7 +216,7 @@
                     <span class="visually-hidden">Уменьшить количество</span>
                   </button>
                   <input class="search-input-guests" type="number" id="adults" name="adults" value="2" required>
-                  <button class="number-plus" type="button">
+                  <button class="button-counter" type="button">
                     <svg aria-hidden="true" focusable="false" width="14" height="14" viewBox="0 0 14 14"
                       fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
@@ -233,7 +235,7 @@
                   </span>
                 </span>
                 <span class="input-number-wrapper">
-                  <button class="number-minus" type="button">
+                  <button class="button-counter" type="button">
                     <svg aria-hidden="true" focusable="false" width="14" height="2" viewBox="0 0 14 2"
                       fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                       <path d="M0 0L0 2L14 2V0L0 0Z" />
@@ -241,7 +243,7 @@
                     <span class="visually-hidden">Уменьшить количество</span>
                   </button>
                   <input class="search-input-guests" type="number" id="children" name="children" value="2">
-                  <button class="number-plus" type="button">
+                  <button class="button-counter" type="button">
                     <svg aria-hidden="true" focusable="false" width="14" height="14" viewBox="0 0 14 14"
                       fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                       <path d="M14 6H8V0H6V6H0V8H6V14H8V8H14V6Z" />
