Исправляет проект для защиты

--- a/catalog.html
+++ b/catalog.html
@@ -149,8 +149,8 @@
                 </div>
               </fieldset>
               <div class="catalog-filter-buttons">
-                <button type="submit" class="catalog-filter-submit">Применить</button>
-                <button type="reset" class="catalog-filter-reset">Сбросить</button>
+                <button class="catalog-filter-submit" type="submit">Применить</button>
+                <button class="catalog-filter-reset" type="reset">Сбросить</button>
               </div>
             </form>
           </section>
